# statiker

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  statiker.yaml
.github/workflows/: main.yml
docs/: README.md  api-reference.md  configuration.md  deployment.md  examples.md  features.md  getting-started.md
src/: cli.rs  config.rs  handlers.rs  main.rs  middleware.rs  proxy.rs  router.rs  server.rs  state.rs  utils.rs
