[package]
name = "statiker"
version = "1.0.1"
edition = "2021"
description = "Serves static files from a directory"
authors = ["Patrick Arndt <patrick.arndt.99@web.de>"]

[[bin]]
name = "statiker"      # Name of the binary
path = "./src/main.rs" # Path to the source file

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.5", features = [
  "cors",
  "trace",
  "compression-br",
  "compression-gzip",
  "fs",
  "set-header",
  "util"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
humantime-serde = "1.1"

bytes = "1"
futures-util = "0.3"

http = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["webpki-roots"] }


governor = "0.6"

once_cell = "1.19"
mime_guess = "2"
html-escape = "0.2"
